# sabia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  alembic.ini  cliff.toml  docker-compose.yml  dump.rdb  justfile  lefthook.yml  make  pyproject.toml
.agents/: AGENTS.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/horus-web/: nginx.conf  package.json
apps/horus-web/src/: app.html
apps/horus-web/src/__tests__/: gps.test.ts  setup.ts
apps/horus-web/src/lib/api/: client.ts  processing.ts
apps/horus-web/src/lib/charts/: BarChart.svelte  index.ts
apps/horus-web/src/lib/components/: Bookmarks.svelte  OnboardingDialog.svelte  RegionComparison.svelte  SoilPanel.svelte  SwipeComparison.svelte  TimeSlider.svelte  TimelapsePlayer.svelte
apps/horus-web/src/lib/helpers/: download.ts  localStorage.svelte.ts
apps/horus-web/src/lib/layout/: Header.svelte
apps/horus-web/src/lib/stores/: alerts.svelte.ts  bookmarks.svelte.ts  gps.svelte.ts  history.svelte.ts  monitors.svelte.ts  processingState.svelte.ts  searchState.svelte.ts
apps/horus-web/src/lib/utils/: logger.ts
apps/horus-web/src/routes/: +error.svelte  +layout.svelte
apps/horus-web/src/routes/dashboard/: +page.svelte
apps/horus-web/src/routes/map/: +page.svelte
apps/horus-web/tests/e2e/: map.spec.ts
apps/sabia-web/: biome.json  components.json  package.json  vite.config.ts
apps/sabia-web/src/: app.css  app.html
apps/sabia-web/src/__tests__/: gps.test.ts
apps/spaceeye-web/: .eslintrc.cjs  nginx.conf  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/spaceeye-web/src/: app.css  app.html
apps/spaceeye-web/src/__tests__/: api.test.ts  clickOutside.test.ts  gps.test.ts  helpers.test.ts  products.test.ts  setup.ts  stores.test.ts
apps/spaceeye-web/src/lib/: config.ts  constants.ts  utils.ts
apps/spaceeye-web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
apps/spaceeye-web/tests/e2e/: app.spec.ts  dashboard.spec.ts
backend/: config.py  exceptions.py  logging_config.py  main.py
backend/api/: air_quality.py  analyses.py  auth.py  deforestation.py  deps.py  disasters.py  downloads.py  esg.py  geocoding.py  health.py  images.py  landcover.py  landcover_utils.py  middleware.py  processing.py  profiles.py  reports.py  router.py  soil.py  tasks_api.py  weather.py
backend/domain/: catalog.py  processing.py  products.py
backend/infra/: __init__.py  http_client.py
backend/models/: database.py  schemas.py
backend/repositories/: analyses.py  images.py  profiles.py
backend/services/: air_quality.py  carbon_stock.py  compressor.py  data_fusion.py  deforestation.py  disasters.py  downloader.py  esg_export.py  external_apis.py  fire_risk.py  geo.py  landcover_zonal.py  processing.py  raster_processor.py  worldcover.py
backend/tasks/: celery_app.py  processing.py
backend/tests/: conftest.py  pytest.ini  test_air_quality.py  test_api.py  test_carbon_stock.py  test_catalog.py  test_deforestation.py  test_disasters.py  test_esg_export.py  test_fire_risk.py  test_geocoding.py  test_landcover_zonal.py  test_products.py  test_profiles.py  test_reports.py  test_weather.py
backend/utils/: __init__.py
backend/workers/: main.py
docs/: api.md  architecture.md  contributing.md  deployment.md  development.md  esg-features.md
docs/adr/: 001-use-postgis-for-spatial-queries.md  002-use-celery-for-async-processing.md  003-domain-split-routers.md  004-dashboard-first-navigation.md
docs/superpowers/plans/: 2026-06-10-esg-dashboard-module-redesign.md
docs/superpowers/specs/: 2026-06-10-esg-dashboard-module-redesign.md
pipeline/: cleanup.py  ingest.py
scripts/: bootstrap.sh  make.sh  migrate.sh  run-backend.sh  run-worker.sh  seed-catalog.sh  start-db.sh
sql/: 001_init.sql  002_monitors.sql  003_analyses.sql  004_profiles.sql  005_triggers.sql
(+170 files in other folders)
