[project]
name = "spaceeye"
version = "0.2.0"
description = "Satellite imagery search & processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "aiohttp>=3.10.0",
    "rasterio>=1.4.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "matplotlib>=3.9.0",
    "pyproj>=3.7.0",
    "python-dotenv>=1.0.0",
    "geopy>=2.4.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
