[project]
name = "horus"
version = "0.2.0"
description = "Satellite imagery search & processing"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",  # binary wheel for pipeline simplicity; production could use psycopg2
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "aiohttp>=3.10.0",
    "rasterio>=1.4.0",
    "numpy>=2.1.0",  # numpy 2.x required for ABI compatibility with rasterio/pandas
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "matplotlib>=3.9.0",
    "pyproj>=3.7.0",
    "python-dotenv>=1.0.0",
    "scikit-image>=0.24.0",
    "httpx>=0.28.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
]
monitoring = [
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["backend/tests/*", "pipeline/*"]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-v --tb=short --cov=backend --cov-report=term-missing --cov-report=html"

[tool.setuptools.packages.find]
include = ["backend*", "pipeline*"]
